# LlamaKeeper

./: .gitignore  DEPLOYMENT.md  PUBLICATION_GUIDE.md  README.md  SECURITY.md  abstract_base_classes_specification.md  abstract_character_model.md  advanced_error_handling_system.md  base_generation_pipeline.md  character_generation_integration.md  dependency_injection_design.md  dynamic_character_model.md  error_handling_component_integration.md  final_publication_check.sh  final_publication_master.sh  final_publication_preparation.sh  final_publication_process.sh  final_publication_readiness_check.sh  llamakeeper_architectural_vision.md  modular_architecture_design.md  modular_architecture_example.md  objective.md  ollama_integration_strategy.md  ollama_model_plugin_example.md  plugin_discovery_system.md  pre_publish_check.sh  publish.sh  publish_checklist.sh  publish_workflow.sh  semantic_memory_manager.md  start.sh
backend/: CHANGELOG.md  CONTRIBUTING.md  MIGRATION_TROUBLESHOOTING.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_migrations.py  run_tests.sh  setup_dev_env.sh  test_database.py
backend/app/: main.py
backend/app/api/: characters.py  schemas.py  stories.py
backend/app/core/: config.py  (+5 more)
backend/migrations/: env.py
backend/tests/: README.md  conftest.py  test_abstract_base_classes.py  test_character_autonomy.py  test_characters.py  test_database_connection.py  test_error_handling.py  test_memory_manager.py  test_models.py  test_ollama_client.py  test_ollama_error_handling.py  test_ollama_model_plugin.py  test_stories.py
(+27 files in other folders)
