[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "llamakeeper-backend"
version = "0.1.0"
description = "Backend for LlamaKeeper AI Storytelling Platform"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]